<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<Button
			android:id="@+id/btn_led_start"
			android:layout_weight="1"
			android:layout_width="0px"
			android:layout_height="wrap_content"
			android:text="@string/str_skt_start"/>

		<Button
			android:id="@+id/btn_led_stop"
			android:layout_weight="1"
			android:layout_width="0px"
			android:layout_height="wrap_content"
			android:text="@string/str_skt_stop"/>

	</LinearLayout>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/str_led_red"
		style="@style/text"/>

	<SeekBar
		android:id="@+id/seek_led_red"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:max="255"
		android:progress="0"
		style="@style/bar"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/str_led_green"
		style="@style/text"/>

	<SeekBar
		android:id="@+id/seek_led_green"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:max="255"
		android:progress="0"
		style="@style/bar"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/str_led_blue"
		style="@style/text"/>

	<SeekBar
		android:id="@+id/seek_led_blue"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:max="255"
		android:progress="0"
		style="@style/bar"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/str_led_hue"
		style="@style/text"/>

	<SeekBar
		android:id="@+id/seek_led_hue"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:max="240"
		android:progress="0"
		style="@style/bar"/>

</LinearLayout>
